--- a/Energy.UI/MainWindow.xaml
+++ b/Energy.UI/MainWindow.xaml
@@ -28,6 +28,8 @@
             <Setter Property="CanUserResizeRows" Value="False" />
             <Setter Property="CanUserReorderColumns" Value="False" />
             <Setter Property="CanUserAddRows" Value="False" />
+            <Setter Property="SelectionUnit" Value="CellOrRowHeader" />
+            <Setter Property="IsSynchronizedWithCurrentItem" Value="True" />
         </Style>
     </Window.Resources>
     
@@ -40,13 +42,37 @@
         
         <Menu Grid.Column="0" Grid.Row="0">
             <MenuItem Header="Задача">
-                <MenuItem Header="Новая"/>
-                <MenuItem Header="Загрузить"/>
-                <MenuItem Header="Сохранить"/>
+                <MenuItem Name="NewTaskMenuItem" Header="Новая" Click="NewTaskMenuItem_OnClick"/>
+                <MenuItem Name="LoadTaskMenuItem" Header="Загрузить" Click="LoadTaskMenuItem_OnClick"/>
+                <MenuItem Name="SaveTaskMenuItem" Header="Сохранить" Click="SaveTaskMenuItem_OnClick"/>
+                <MenuItem Name="SolveTaskMenuItem" Header="Решить" Click="SolveTaskMenuItem_OnClick" />
+            </MenuItem>
+            <MenuItem Header="Тест">
+                <MenuItem Name="GenerateDataMenuItem"  Header="Сгенерировать данные" Click="GenerateDataMenuItem_OnClick"/>
             </MenuItem>
         </Menu>
 
         <TabControl Grid.Row="1">
+            <TabItem Header="График">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <StackPanel Grid.Column="0">
+                        <Button Name="AddStationOnCanvas" Content="Добавить станцию" Margin="2" Click="AddStationOnCanvas_OnClick" />
+                    </StackPanel>
+
+                    <Border Grid.Column="1" BorderBrush="Black" BorderThickness="3" ClipToBounds="True" Margin="0,0,10,0">
+                        <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" Name="ScrollBars" >
+                            <Canvas DockPanel.Dock="Top" Name="MainCanvas" Background="Azure" AllowDrop="True" VerticalAlignment="Top" HorizontalAlignment="Left" Width="3200" Height="1800" ClipToBounds="True" />
+                        </ScrollViewer>
+                    </Border>
+
+                </Grid>
+            </TabItem>
+            
             <TabItem Header="Станции">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -56,7 +82,9 @@
 
                     <StackPanel Grid.Column="0">
                         <Button x:Name="AddStation" Content="Добавить станцию" Margin="2" Click="AddStation_OnClick" />
+                        <Button x:Name="RemoveStation" Content="Удалить станцию" Margin="2" Click="RemoveStation_OnClick" />
                         <Button x:Name="AddFeatureOnStation" Content="Добавить фичу" Margin="2" Click="AddFeature_OnClick" />
+                        <Button x:Name="RemoveFeatureOnStation" Content="Удалить фичу" Margin="2" Click="RemoveFeatureOnStation_OnClick" />
                     </StackPanel>
                     <DataGrid x:Name="StationsDataGrid" Grid.Column="1" ItemsSource="{Binding Stations}" />
                 </Grid>
@@ -71,13 +99,17 @@
                     
                     <StackPanel Grid.Column="0">
                         <Button x:Name="AddConsumer" Content="Добавить потребителя" Margin="2" Click="AddConsumer_OnClick" />
+                        <Button x:Name="RemoveConsumer" Content="Удалить потребителя" Margin="2" Click="RemoveConsumer_OnClick" />
                         <Button x:Name="AddFeatureOnConsumer" Content="Добавить фичу" Margin="2" Click="AddFeature_OnClick" />
+                        <Button x:Name="RemoveFeatureOnConsumer" Content="Удалить фичу" Margin="2" Click="RemoveFeatureOnConsumer_OnClick" />
                     </StackPanel>
                     <DataGrid x:Name="ConsumersDataGrid" Grid.Column="1" ItemsSource="{Binding Consumers}" />
                 </Grid>
             </TabItem>
             
-            <TabItem Header=""></TabItem>
+            <TabItem Header="Результат">
+                <Label Content="Тут пока ничего нет ..." VerticalAlignment="Center" HorizontalAlignment="Center"></Label>
+            </TabItem>
 
 
         </TabControl>
@@ -90,7 +122,7 @@
                 <TextBlock Text="{Binding Consumers.Count, StringFormat='Потребителей: \{0\}'}" />
             </StatusBarItem>
             <StatusBarItem>
-                <TextBlock Text="{Binding FeaturesNames.Count, StringFormat='Фич: \{0\}'}" />
+                <TextBlock Text="{Binding CommonFeatureNames.Count, StringFormat='Фич: \{0\}'}" />
             </StatusBarItem>
         </StatusBar>
     </Grid>
