--- a/Energy.UI/App.xaml
+++ b/Energy.UI/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:Energy.UI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Application.Resources>
 </Application>
