--- a/Energy.UI/Controls/Station.xaml
+++ b/Energy.UI/Controls/Station.xaml
@@ -4,16 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Energy.UI.Controls"
-             mc:Ignorable="d" Height="100" Width="100">
-    
-    <local:ControlBase.Resources>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-    </local:ControlBase.Resources>
-    
+             mc:Ignorable="d" Height="100" Width="100" >
     <Grid>
         <Polygon Points="6,94 94,94 85,10 80,10 75,85 70,85 70,50 6,50" Fill="Black" Stroke="Black" />
         <Polygon Points="41,60 45,60 40,70 45,70 34,83 38,74 35,74" Fill="Yellow" Stroke="White" />
         <TextBlock Name="NameTextBlock" Text="Станция" Margin="5" />
-        <Rectangle Fill="LightBlue" Opacity="0.7" Visibility="{Binding Path=IsVisible, Converter={StaticResource BooleanToVisibilityConverter} }" />
+        <Rectangle Fill="LightBlue" Opacity="0.7" Visibility="{Binding Path=IsSelected, Converter={StaticResource BooleanToVisibilityConverter} }" />
     </Grid>
 </local:ControlBase>
