--- a/Energy.UI/Controls/GraphControl.xaml
+++ b/Energy.UI/Controls/GraphControl.xaml
@@ -1,14 +1,42 @@
-﻿<UserControl x:Class="Energy.UI.Controls.GraphControl"
+﻿<ItemsControl x:Class="Energy.UI.Controls.GraphControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:model="clr-namespace:Energy.UI.Model"
              mc:Ignorable="d" d:DesignHeight="300" d:DesignWidth="300">
     
-    <Border BorderBrush="Black" BorderThickness="3" ClipToBounds="True" Margin="0,0,10,0">
-        <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" Name="ScrollBars" >
-            <Canvas DockPanel.Dock="Top" Name="MainCanvas" Background="Azure" AllowDrop="True" VerticalAlignment="Top" HorizontalAlignment="Left" Width="3200" Height="1800" ClipToBounds="True" />
-        </ScrollViewer>
-    </Border>
-    
-</UserControl>
+    <ItemsControl.ItemsPanel>
+        <ItemsPanelTemplate>
+            <Canvas Name="MainCanvas" Background="Azure" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
+        </ItemsPanelTemplate>
+    </ItemsControl.ItemsPanel>
+
+    <ItemsControl.ItemContainerStyle>
+        <Style TargetType="ContentPresenter">
+            <Setter Property="Canvas.Left" Value="{Binding Path=X}"/>
+            <Setter Property="Canvas.Top" Value="{Binding Path=Y}"/>
+        </Style>
+    </ItemsControl.ItemContainerStyle>
+
+
+    <ItemsControl.Resources>
+        <DataTemplate DataType="{x:Type model:StationModel}">
+            <Grid Width="100" Height="100" Tag="{Binding}">
+                <Polygon Points="6,94 94,94 85,10 80,10 75,85 70,85 70,50 6,50" Fill="Black" Stroke="Black" />
+                <Polygon Points="41,60 45,60 40,70 45,70 34,83 38,74 35,74" Fill="Yellow" Stroke="White" />
+                <TextBlock Text="{Binding Name}" Margin="5" />
+                <Rectangle Fill="LightBlue" Opacity="0.7" Visibility="{Binding Path=IsSelected, Converter={StaticResource BooleanToVisibilityConverter} }" />
+            </Grid>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type model:ConsumerModel}">
+            <Grid Width="100" Height="50" Tag="{Binding}">
+                <Border BorderThickness="2" BorderBrush="Black" Background="LightSalmon" CornerRadius="10">
+                    <TextBlock TextWrapping="Wrap" TextAlignment="Center" Text="{Binding Name}" VerticalAlignment="Center" />
+                </Border>
+                <Rectangle RadiusX="10" RadiusY="10" Fill="LightBlue" Opacity="0.7" Visibility="{Binding Path=IsSelected, Converter={StaticResource BooleanToVisibilityConverter} }" />
+            </Grid>
+        </DataTemplate>
+    </ItemsControl.Resources>
+
+</ItemsControl>
