--- a/Energy.UI/Controls/GraphControl.xaml
+++ b/Energy.UI/Controls/GraphControl.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:model="clr-namespace:Energy.UI.Model"
              xmlns:converters="clr-namespace:Energy.UI.Converters"
              ClipToBounds="True"
@@ -18,7 +17,7 @@
         <converters:DataTypeConverter x:Key="DataTypeConverter" />
         
         <DataTemplate DataType="{x:Type model:StationModel}">
-            <Grid Width="100" Height="100">
+            <Grid Width="100" Height="100" ContextMenu="{StaticResource DeleteElementMenuItem}" >
                 <Polygon Points="6,94 94,94 85,10 80,10 75,85 70,85 70,50 6,50" Fill="Black" Stroke="Black" />
                 <Polygon Points="41,60 45,60 40,70 45,70 34,83 38,74 35,74" Fill="Yellow" Stroke="White" />
                 <TextBlock Text="{Binding Name}" Margin="5" />
