--- a/Energy.UI/MainWindow.xaml
+++ b/Energy.UI/MainWindow.xaml
@@ -75,7 +75,8 @@
             </TabItem>
             
             <TabItem Header="Результат">
-                <Label Content="Тут пока ничего нет ..." VerticalAlignment="Center" HorizontalAlignment="Center"></Label>
+                <!--<Label Content="Тут пока ничего нет ..." VerticalAlignment="Center" HorizontalAlignment="Center"></Label>-->
+                <controls:TestCanvas></controls:TestCanvas>
             </TabItem>
 
         </TabControl>
