--- a/Energy.UI/Windows/NameRequestWindow.xaml
+++ b/Energy.UI/Windows/NameRequestWindow.xaml
@@ -4,8 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Energy.UI.Windows"
-        mc:Ignorable="d"
-        Title="Ввведите название" Height="116.949" Width="300">
+        mc:Ignorable="d" ResizeMode="NoResize" WindowStartupLocation="CenterOwner"
+        Title="Введите название" Height="116.949" Width="300"
+        DataContext="{Binding RelativeSource={RelativeSource Self}}">
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
@@ -17,9 +19,9 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <TextBox Name="NameTextBox" Grid.ColumnSpan="2" Margin="10" />
+        <TextBox Name="NameTextBox" Grid.ColumnSpan="2" Margin="10" Text="{Binding EnteredName}" />
 
-        <Button Grid.Row="1" Grid.Column="0" Margin="10" Name="CancelButton" Content="Отмена" Click="CancelButton_OnClick" />
-        <Button Grid.Row="1" Grid.Column="1" Margin="10" Name="OkButton"  Content="ОК" Click="OkButton_OnClick" IsDefault="True" />
+        <Button Grid.Row="1" Grid.Column="0" Margin="10" Name="OkButton"  Content="ОК" Click="OkButton_OnClick" IsDefault="True" />
+        <Button Grid.Row="1" Grid.Column="1" Margin="10" Name="CancelButton" Content="Отмена" Click="CancelButton_OnClick" />
     </Grid>
 </Window>
